--- a/ppx_sexp_value.opam
+++ b/ppx_sexp_value.opam
@@ -6,19 +6,20 @@ bug-reports: "https://github.com/janestreet/ppx_sexp_value/issues"
 dev-repo: "https://github.com/janestreet/ppx_sexp_value.git"
 license: "Apache-2.0"
 build: [
-  ["./configure" "--prefix" prefix]
-  [make]
+  ["jbuilder" "build-package" "ppx_sexp_value" "-j" jobs]
 ]
 depends: [
-  "ocamlbuild"     {build}
-  "oasis"          {build & >= "0.4"}
-  "ocamlfind"      {build & >= "1.3.2"}
-  "js-build-tools" {build}
+  "jbuilder"
   "ppx_core"
   "ppx_driver"
   "ppx_here"
   "ppx_sexp_conv"
-  "ppx_tools"      {>= "0.99.3"}
+  "sexplib"
+  "ppx_tools"     {>= "0.99.3"}
 ]
 available: [ ocaml-version >= "4.03.0" ]
-conflicts: [ "oasis" {= "0.4.7"} ]
+descr: "
+A ppx rewriter that simplifies building s-expressions from ocaml values
+
+Part of the Jane Street's PPX rewriters collection.
+"
