--- a/ppx_sexp_value.opam
+++ b/ppx_sexp_value.opam
@@ -4,7 +4,7 @@ authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/ppx_sexp_value"
 bug-reports: "https://github.com/janestreet/ppx_sexp_value/issues"
 dev-repo: "git+https://github.com/janestreet/ppx_sexp_value.git"
-license: "Apache-2.0"
+license: "MIT"
 build: [
   ["jbuilder" "build" "-p" name "-j" jobs]
 ]
