--- a/ppx_sexp_value.opam
+++ b/ppx_sexp_value.opam
@@ -1,24 +1,23 @@
-opam-version: "1.2"
+opam-version: "2.0"
 maintainer: "opensource@janestreet.com"
 authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/ppx_sexp_value"
 bug-reports: "https://github.com/janestreet/ppx_sexp_value/issues"
 dev-repo: "git+https://github.com/janestreet/ppx_sexp_value.git"
+doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_sexp_value/index.html"
 license: "MIT"
 build: [
-  ["jbuilder" "build" "-p" name "-j" jobs]
+  ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
+  "ocaml" {>= "4.04.2"}
   "base"
   "ppx_here"
   "ppx_sexp_conv"
-  "jbuilder"                {build & >= "1.0+beta18.1"}
-  "ocaml-migrate-parsetree" {>= "1.0"}
-  "ppxlib"                  {>= "0.1.0"}
+  "dune"          {build & >= "1.5.1"}
+  "ppxlib"        {>= "0.4.0"}
 ]
-available: [ ocaml-version >= "4.04.2" ]
-descr: "
-A ppx rewriter that simplifies building s-expressions from ocaml values
-
+synopsis: "A ppx rewriter that simplifies building s-expressions from ocaml values"
+description: "
 Part of the Jane Street's PPX rewriters collection.
 "
