--- a/ppx_sexp_value.opam
+++ b/ppx_sexp_value.opam
@@ -14,7 +14,7 @@ depends: [
   "base"
   "ppx_here"
   "ppx_sexp_conv"
-  "dune"          {build & >= "1.5.1"}
+  "dune"          {>= "1.5.1"}
   "ppxlib"        {>= "0.9.0"}
 ]
 synopsis: "A ppx rewriter that simplifies building s-expressions from ocaml values"
