--- a/example/dune
+++ b/example/dune
@@ -1,4 +1,4 @@
-(library (name example_ppx_sexp_value_lib) (libraries core)
+(library (name example_ppx_sexp_value_lib) (libraries core core.time_unix)
  (preprocess (pps ppx_sexp_value)))
 
 (alias (name DEFAULT) (deps example.ml.pp))
