--- a/ppx_sexp_value.opam
+++ b/ppx_sexp_value.opam
@@ -15,7 +15,7 @@ depends: [
   "ppx_here"
   "ppx_sexp_conv"
   "dune"          {>= "2.0.0"}
-  "ppxlib"        {>= "0.15.0" & < "0.18.0"}
+  "ppxlib"        {>= "0.22.0"}
 ]
 synopsis: "A ppx rewriter that simplifies building s-expressions from ocaml values"
 description: "
