--- a/example/dune
+++ b/example/dune
@@ -1,5 +1,4 @@
 (library (name example_ppx_sexp_value_lib)
- (libraries core_kernel.core core.time_unix)
- (preprocess (pps ppx_sexp_value)))
+ (libraries core core_unix.time_unix) (preprocess (pps ppx_sexp_value)))
 
 (alias (name DEFAULT) (deps example.ml.pp))
