--- a/src/dune
+++ b/src/dune
@@ -1,4 +1,8 @@
-(library (name ppx_sexp_value) (public_name ppx_sexp_value)
- (kind ppx_rewriter) (ppx_runtime_libraries ppx_sexp_conv.runtime-lib)
+(library
+ (name ppx_sexp_value)
+ (public_name ppx_sexp_value)
+ (kind ppx_rewriter)
+ (ppx_runtime_libraries ppx_sexp_conv.runtime-lib)
  (libraries base ppxlib ppx_sexp_conv.expander ppx_here.expander)
- (preprocess (pps ppxlib.metaquot)))
+ (preprocess
+  (pps ppxlib.metaquot)))
