--- a/ppx_sexp_value.opam
+++ b/ppx_sexp_value.opam
@@ -15,7 +15,7 @@ depends: [
   "ppx_here"
   "ppx_sexp_conv"
   "dune"          {>= "3.11.0"}
-  "ppxlib"        {>= "0.28.0"}
+  "ppxlib"        {= "0.33.0+jst"}
 ]
 available: arch != "arm32" & arch != "x86_32"
 synopsis: "A ppx rewriter that simplifies building s-expressions from ocaml values"
