--- a/test/dune
+++ b/test/dune
@@ -1,6 +1,6 @@
 (library
  (name test_ppx_sexp_value_lib)
- (libraries core)
+ (libraries core int64_u)
  (preprocess
   (pps ppx_sexp_conv ppx_here ppx_assert ppx_sexp_value ppx_inline_test
-    ppx_cold ppx_string)))
+    ppx_cold ppx_string ppx_template)))
