--- a/example/dune
+++ b/example/dune
@@ -1,9 +1,10 @@
 (library
  (name example_ppx_sexp_value_lib)
- (libraries core core_unix core_unix.time_float_unix)
+ (libraries core core_unix local_iterators_to_be_replaced
+   core_unix.time_float_unix)
  (preprocess
-  (pps ppx_sexp_value)))
+  (pps ppx_sexp_value ppx_template)))
 
 (alias
- (name DEFAULT)
+ (name default)
  (deps example.ml.pp))
