--- a/test/dune
+++ b/test/dune
@@ -3,4 +3,4 @@
  (libraries core unboxed.int64_u)
  (preprocess
   (pps ppx_sexp_conv ppx_here ppx_assert ppx_sexp_value ppx_inline_test
-    ppx_cold ppx_string ppx_template)))
+    ppx_cold ppx_globalize ppx_string ppx_template)))
